--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1> Hola mi nombre es Oswaldo Alba camino a la programación web front end </h1>
+<h1> Hola mi nombre es Oswaldo Alba voy camino a la programación web front end </h1>
+<br>
+<h3>Programando ando</h3>
