--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1> Hola mi nombre es Oswaldo Alba voy camino a la programación web front end </h1>
-<br>
-<h3>Programando ando</h3>
+<h1> Camino a la programacion </h1>
+<hr>
+<h2>Programando ando</h2>
