--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<link rel="styesheet" href="estilos.css"
-<h1> Camino a la programacion </h1>
+<head>
+<link rel="stylesheet" href="estilos.css"/>
+  <title>Mi primera pagina</title>
+</head>
+  <h1> Camino a la programacion </h1>
 <hr>
 <h2>Programando ando</h2>
