--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <link rel="stylesheet" href="estilos.css"/>
   <title>Mi primera pagina</title>
 </head>
-  <h1> Camino a la programacion </h1>
+  <h1> Maquetando </h1>
 <hr>
-<h2>Programando ando</h2>
+<div>
+<p> Teniendo en mente como poder maquetar y publicar lo que tengo que realizar en el proyecto de ingreso de informacion con una base de datos de informacion</p>
+</div>
