--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
   <h1> Maquetando </h1>
 <hr>
+<h2> Verificando lo anotado </h2>
 <div class="parrafo">
 <p> Teniendo en mente como poder maquetar y publicar lo que tengo que realizar en el proyecto de ingreso de informacion con una base de datos de informacion</p>
 </div>
